--- a/csv_viewer.ipynb
+++ b/csv_viewer.ipynb
@@ -8,7 +8,32 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib notebook"
+    "%matplotlib notebook\n",
+    "%precision 2\n",
+    "\n",
+    "import csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CSV file info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "filename = 'filename.csv'\n",
+    "\n",
+    "with open(filename) as csvfile:\n",
+    "    values = list(csv.DictReader(csvfile))\n",
+    "    \n"
    ]
   }
  ],
